--- a/.github/workflows/github-actions-cicd.yml
+++ b/.github/workflows/github-actions-cicd.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ "main" ]
     paths-ignore:
-      - './README.md'
+      - 'README.md'
   pull_request:
     branches: [ "main" ]
 env:
