--- a/.github/workflows/github-actions-cicd.yml
+++ b/.github/workflows/github-actions-cicd.yml
@@ -2,8 +2,8 @@ name: Java App deploy to EKS
 on:
   push:
     branches: [ "main" ]
-    paths-ignore:
-      - 'README.md'
+    paths:
+      - '!README.md'
   pull_request:
     branches: [ "main" ]
 env:
