--- a/.github/workflows/github-actions-cicd.yml
+++ b/.github/workflows/github-actions-cicd.yml
@@ -4,6 +4,7 @@ on:
     branches: [ "main" ]
     paths:
       - '!README.md'
+      - '!bestpractices-challenges.md'
   pull_request:
     branches: [ "main" ]
 env:
